# iot

./: .gitignore  CMakeLists.txt  sdkconfig.ci  sdkconfig.defaults
components/blink/: blink_example_main.c  blink_example_main.h
components/blufi/: CMakeLists.txt  blufi_example_main.c  blufi_example_main.h  blufi_init.c  blufi_security.c
components/servo/: CMakeLists.txt  servo.c  servo.h
components/temp_sensor/: CMakeLists.txt  temp_sensor_main.c  temp_sensor_main.h
components/wifi/: CMakeLists.txt  wifi_config.c  wifi_config.h
main/: main.c
