# idf_component_register(SRCS "blufi_example_main.c"
#                             "blufi_security.c"
#                             "blufi_init.c"
#                         REQUIRES 
#                             esp_wifi 
#                             esp_event 
#                             nvs_flash 
#                             driver 
#                             bt
#                             mbedtls
#                     INCLUDE_DIRS ".")
